# channels-lite

./: .gitignore  CLAUDE.md  README.md  justfile  layer_spec.md  pyproject.toml  redis_implementation.py
.github/workflows/: publish.yml  test.yml
demo/: db.sqlite3  db.sqlite3-shm  db.sqlite3-wal
demo/demo/: asgi.py  consumers.py  settings.py  urls.py
demo/demo/templates/: index.html  room.html
src/channels_lite/: __init__.py  models.py  router.py
src/channels_lite/layers/: __init__.py  aio.py  aiosqlite_layer.py  core.py
src/channels_lite/management/commands/: clean_channels.py
src/channels_lite/migrations/: 0001_initial.py  0002_remove_event_channels_li_channel_45ccc8_idx_and_more.py  0003_alter_event_data.py
tests/: conftest.py  test_benchmarks.py  test_channel_layers.py  test_core_layer.py  test_serializers.py
